// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherAppTemplate renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container full transparentBG contentWrapper"
      >
        <div
          class="container transparentBG maxWidthLarge"
        >
          <header
            class="header"
          >
            <nav>
              <ul
                class="list"
              >
                <li
                  class="listItem active"
                >
                  Ottawa
                </li>
                <li
                  class="listItem notActive"
                >
                  Moscow
                </li>
                <li
                  class="listItem notActive"
                >
                  Tokyo
                </li>
              </ul>
            </nav>
          </header>
          <div
            class="container flexColumn transparentBG border borderRadius shadow container"
          >
            <p
              class="default large weightNormal"
            >
              Error
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container full transparentBG contentWrapper"
    >
      <div
        class="container transparentBG maxWidthLarge"
      >
        <header
          class="header"
        >
          <nav>
            <ul
              class="list"
            >
              <li
                class="listItem active"
              >
                Ottawa
              </li>
              <li
                class="listItem notActive"
              >
                Moscow
              </li>
              <li
                class="listItem notActive"
              >
                Tokyo
              </li>
            </ul>
          </nav>
        </header>
        <div
          class="container flexColumn transparentBG border borderRadius shadow container"
        >
          <p
            class="default large weightNormal"
          >
            Error
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WeatherAppTemplate renders correctly with no cities 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container full transparentBG contentWrapper"
      >
        <div
          class="container transparentBG maxWidthLarge"
        >
          <header
            class="header"
          >
            <nav>
              <ul
                class="list"
              >
                <li
                  class="listItem active"
                >
                  Ottawa
                </li>
                <li
                  class="listItem notActive"
                >
                  Moscow
                </li>
                <li
                  class="listItem notActive"
                >
                  Tokyo
                </li>
              </ul>
            </nav>
          </header>
          <div
            class="container transparentBG"
          >
            Please select a city!
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container full transparentBG contentWrapper"
    >
      <div
        class="container transparentBG maxWidthLarge"
      >
        <header
          class="header"
        >
          <nav>
            <ul
              class="list"
            >
              <li
                class="listItem active"
              >
                Ottawa
              </li>
              <li
                class="listItem notActive"
              >
                Moscow
              </li>
              <li
                class="listItem notActive"
              >
                Tokyo
              </li>
            </ul>
          </nav>
        </header>
        <div
          class="container transparentBG"
        >
          Please select a city!
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WeatherAppTemplate renders correctly with one city 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container full transparentBG contentWrapper"
      >
        <div
          class="container transparentBG maxWidthLarge"
        >
          <header
            class="header"
          >
            <nav>
              <ul
                class="list"
              >
                <li
                  class="listItem active"
                >
                  Ottawa
                </li>
                <li
                  class="listItem notActive"
                >
                  Moscow
                </li>
                <li
                  class="listItem notActive"
                >
                  Tokyo
                </li>
              </ul>
            </nav>
          </header>
          <div
            class="container flexColumn transparentBG border borderRadius shadow container"
          >
            <p
              class="default large weightNormal"
            >
              Error
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container full transparentBG contentWrapper"
    >
      <div
        class="container transparentBG maxWidthLarge"
      >
        <header
          class="header"
        >
          <nav>
            <ul
              class="list"
            >
              <li
                class="listItem active"
              >
                Ottawa
              </li>
              <li
                class="listItem notActive"
              >
                Moscow
              </li>
              <li
                class="listItem notActive"
              >
                Tokyo
              </li>
            </ul>
          </nav>
        </header>
        <div
          class="container flexColumn transparentBG border borderRadius shadow container"
        >
          <p
            class="default large weightNormal"
          >
            Error
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
